syntax = "proto3";

package autokitteh.oauth.v1;

import "buf/validate/validate.proto";

// OAuthService is a generic implementation of 3-legged OAuth 2.0 flows,
// reusable by OAuth-based integrations and AutoKitteh user authentication.
// It assumes that the AutoKitteh server has a public address for callbacks,
// which allows callers of this service not to care about this requirement.
service OAuthService {
  rpc Get(GetRequest) returns (GetResponse);
  rpc StartFlow(StartFlowRequest) returns (StartFlowResponse);
  rpc Exchange(ExchangeRequest) returns (ExchangeResponse);
}

message GetRequest {
  string id = 1 [(buf.validate.field).string.min_len = 1];
}

message GetResponse {
  OAuthConfig config = 1;
}

message StartFlowRequest {
  string integration = 1 [(buf.validate.field).string.min_len = 1];
  string connection_id = 2 [(buf.validate.field).string.min_len = 1];
  string origin = 3 [(buf.validate.field).string.min_len = 1];
}

message StartFlowResponse {
  string url = 1;
}

message ExchangeRequest {
  string integration = 1 [(buf.validate.field).string.min_len = 1];
  string connection_id = 2 [(buf.validate.field).string.min_len = 1];
  string code = 3 [(buf.validate.field).string.min_len = 1];
}

message ExchangeResponse {
  string access_token = 1;
  string refresh_token = 2;
  string token_type = 3;
  int64 expiry = 4;
}

message OAuthConfig {
  string client_id = 1 [(buf.validate.field).string.min_len = 1];
  string client_secret = 2 [(buf.validate.field).string.min_len = 1];

  string auth_url = 3 [(buf.validate.field).string.min_len = 1];
  string device_auth_url = 4 [(buf.validate.field).string.min_len = 1];
  string token_url = 5 [(buf.validate.field).string.min_len = 1];
  string redirect_url = 6 [(buf.validate.field).string.min_len = 1];

  // https://pkg.go.dev/golang.org/x/oauth2#AuthStyle
  int32 auth_style = 7;
  // https://pkg.go.dev/golang.org/x/oauth2#AuthCodeOption
  map<string, string> options = 8;

  repeated string scopes = 9;
}
